src/sass/scss/layout/_layout.scss
.App {
  display: flex;
  justify-content: space-between;
  //flex-wrap: wrap;
}

.game__main {
  display: flex;
  flex-wrap: wrap;
  //order: 1;
  overflow: scroll;
}

.bezel {
  display: flex;
  justify-content: flex-start;
  align-items: center;

}

.bezel__title {
  position: relative;
  left: 45%;
  transform: translateX(-45%);

}

.editor {
  display: flex;
  flex-direction: column;

}

